# d-project

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  code_of_conduct.md  codecov.yaml  conanfile.py  contributing.md  meson.build  meson_options.txt  readme.md
.ci/: build.py  install.py  test.py
src/: meson.build
src/main/: meson.build
src/main/exe/: main.d  meson.build
src/main/exe/src/: meson.build  project.d
src/main/res/: todo.txt
src/test/: meson.build
src/test/cases/: meson.build  test.d
src/test/res/: todo.txt
subprojects/: .gitkeep
