###################################################################################
#                                                                                 #
# NAME: meson_options.txt                                                         #
#                                                                                 #
# AUTHOR: Michael Brockus.                                                        #
#                                                                                 #
# CONTACT: <mailto:michael@squidfarts.com>                                        #
#                                                                                 #
# NOTICES:                                                                        #
#                                                                                 #
# License: Apache 2.0 :http://www.apache.org/licenses/LICENSE-2.0                 #
#                                                                                 #
###################################################################################



##
#
# Meson: Target options feature.
#
##
option('with_tests'  , type : 'feature', value : 'disabled', description: 'Enable unit testing.')